implementación de módulos

--- a/taller.ipynb
+++ b/taller.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -55,6 +55,34 @@
     "!pip install numpy\n",
     "!pip install pandas\n",
     "!pip install sympy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "2\n",
+      "6\n",
+      "6.0\n",
+      "Distancia: 5.656854249492381\n"
+     ]
+    }
+   ],
+   "source": [
+    "from matematica import sumar, restar, multiplicar, dividir\n",
+    "from geometria import distancia\n",
+    "\n",
+    "print(sumar(2,3))\n",
+    "print(restar(4,2))\n",
+    "print(multiplicar(3,2))\n",
+    "print(dividir(36,6))\n",
+    "print(\"Distancia:\", distancia(1,2,5,6))\n"
    ]
   }
  ],
